# bcr-arm-ros2-pick-and-place-demo

./: .dockerignore  .gitignore  README.md  docker-compose.yml
docker/: Dockerfile.humble  entrypoint.sh
src/bcr_arm_bringup/: CMakeLists.txt  package.xml
src/bcr_arm_bringup/launch/: bcr_arm_bringup.launch.py  notice.txt
src/bcr_arm_demo/: CMakeLists.txt  package.xml
src/bcr_arm_demo/launch/: pick_place_demo.launch.py  reach_target_demo.launch.py
src/bcr_arm_demo/scripts/: gripper_demo.py
src/bcr_arm_demo/src/: pick_place_demo.cpp  pick_place_demo_bestv.cpp  reach_target_demo.cpp  reach_target_demo_1.cpp
src/bcr_arm_description/: CMakeLists.txt  package.xml
src/bcr_arm_description/launch/: display.launch.py
src/bcr_arm_description/urdf/: bcr_arm.urdf  bcr_arm.urdf.xacro  bcr_arm_inertial_macros.xacro  bcr_arm_links_macros.xacro  bcr_arm_materials.xacro  bcr_arm_ros2_controllers.xacro  construct.txt  gripper.xacro
src/bcr_arm_gazebo/: CMakeLists.txt  package.xml
src/bcr_arm_gazebo/config/: ros2_controllers.yaml
src/bcr_arm_gazebo/launch/: bcr_arm_gazebo.launch.py
src/bcr_arm_gazebo/scripts/: control_arm_cli.py  notice.txt
src/bcr_arm_gazebo/worlds/: empty.sdf
src/bcr_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/bcr_arm_moveit_config/config/: bcr_arm.ros2_control.xacro  bcr_arm.srdf  bcr_arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  ros2_controllers.yaml
src/bcr_arm_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py
src/bcr_arm_moveit_config/scripts/: add_collision_objects.py  notice.txt
